--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>首页</title>
+    <link rel="stylesheet" href="./setCache/setCache.css?a=1">
     <style>
         * {
             margin: 0;
@@ -26,7 +27,9 @@
 </head>
 
 <body>
-    <h1>你的邮箱名为：__email__</h1>
+    <h1>你的密码为：__password__</h1>
+
+    <script src="./setCache/setCache.js"></script>
 </body>
 
 </html>
